--- a/pertemuan-02/profile.html
+++ b/pertemuan-02/profile.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My Profile</title>
-  </head>
-  <body>
-    <h1>My Profile</h1>
-  </body>
+
+<head>
+    <title>My Profile | Janzen</title>
+</head>
+
+<body>
+    <h1>My Profile | Janzen</h1>
+</body>
+
 </html>
